--- a/css-grid.scss
+++ b/css-grid.scss
@@ -1,12 +1,171 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /*resets*/
-body { margin: 0;}
+body { 
+    margin: 0;
+    font-size: 16px;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
 
 .section {
-    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     box-sizing: border-box;
-    background-color: grey;
+    background-color: #eee;
+    @media only screen and (min-width: 40.063em) {
+        padding-left: 3.25rem;
+        padding-right: 3.25rem;
+    }
+    @media only screen and (min-width: 64.063em) {
+        max-width: 90rem;
+        padding-left: 8.5rem;
+        padding-right: 8.5rem;
+    }
+    @media only screen and (min-width: 90.063em) { // for x-large settings
+       
+    }
 } 
+
+.column-2, .column-3, .column-4, .column-5, .grid-3-9, .grid-4-8, .grid-5-7, .grid-7-5, .grid-8-4, .grid-9-3 {
+    display: grid;
+    grid-template-columns: 100%;
+    row-gap: 2rem;
+    @media only screen and (min-width: 40.0625em) {
+        grid-template-columns: calc(50% - 1rem) calc(50% - 1rem);
+        column-gap: 2rem;
+    }
+    &.column-no-gap {
+        grid-template-columns: 50% 50%;
+        column-gap: 0rem;
+    }
+}
+@media only screen and (min-width: 64.0625em) {
+    .column-3 {
+        grid-template-columns: calc(33.33% - 1.33rem) calc(33.33% - 1.33rem) calc(33.33% - 1.33rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 33.33% 33.33% 33.33%;
+        }
+    }
+    .column-4 {
+        grid-template-columns: calc(25% - 1.5rem) calc(25% - 1.5rem) calc(25% - 1.5rem) calc(25% - 1.5rem);
+        column-gap: 2rem;
+        &.cl-column-no-gap {
+            grid-template-columns: 25% 25% 25% 25%;
+        }
+    }
+    .column-5 {
+        grid-template-columns: calc(20% - 1.6rem) calc(20% - 1.6rem) calc(20% - 1.6rem) calc(20% - 1.6rem) calc(20% - 1.6rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 20% 20% 20% 20% 20%;
+        }
+    }
+    .grid-3-9 {
+        grid-template-columns: calc(25% - 1rem) calc(75% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 25% 75%;
+        }
+    }
+    .grid-4-8 {
+        grid-template-columns: calc(33.33% - 1rem) calc(66.66% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 33.33% 66.66%;
+        }
+    }
+    .grid-5-7 {
+        grid-template-columns: calc(41.66% - 1rem) calc(58.33% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 41.66% 58.33%;
+        }
+    }
+    .grid-7-5 {
+        grid-template-columns: calc(58.33% - 1rem) calc(41.66% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 58.33% 41.66%;
+        }
+    }
+    .grid-8-4 {
+        grid-template-columns: calc(66.66% - 1rem) calc(33.33% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 66.66% 33.33%;
+        }
+    }
+    .grid-9-3 {
+        grid-template-columns: calc(75% - 1rem) calc(25% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 75% 25%;
+        }
+    }
+}
+@media only screen and (min-width: 40.0625em) and (max-width: 64em) {
+    .column-1-t { /* 1 column on tablet */
+        grid-template-columns: 100% !important;
+        row-gap: 2rem;
+    }
+    .column-3-t { /* 3 column on tablet */
+        grid-template-columns: calc(33.33% - 1.33rem) calc(33.33% - 1.33rem) calc(33.33% - 1.33rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 33.33% 33.33% 33.33%;
+        }
+    }
+    .grid-7-5-t {
+        grid-template-columns: calc(58.33% - 1rem) calc(41.66% - 1rem);
+        column-gap: 2rem;
+        &.column-no-gap {
+            grid-template-columns: 58.33% 41.66%;
+        }
+    }
+    .grid-8-4-t {
+        grid-template-columns: calc(66.66% - 1rem) calc(33.33% - 1rem);
+        column-gap: 2rem;
+        .column-no-gap {
+            grid-template-columns: 66.66% 33.33%;
+        }
+    }
+    .grid-8-t {
+        grid-template-columns: 66.66% !important;
+    }
+    .grid-9-t {
+        grid-template-columns: 75% !important;
+    }
+    .column-no-row-gap-t {
+        row-gap: 0rem;
+    }
+}
+@media only screen and (max-width: 64em) {
+    .column-no-row-gap-t-down {
+      row-gap: 0rem;
+    }
+}
+@media only screen and (max-width: 40em) {
+    .column-2-m {
+      grid-template-columns: calc(50% - 1rem) calc(50% - 1rem);
+      column-gap: 2rem;
+    }
+  
+    .column-no-row-gap-m {
+      row-gap: 0rem;
+    }
+}
+ @media only screen and (min-width: 64.0625em) {
+    .column-span-2-d {
+      grid-column: span 2;
+    }
+    .column-span-3-d {
+      grid-column: span 3;
+    }
+    .column-span-4-d {
+      grid-column: span 4;
+    }
+}
